samples/SyntaxErrors/MissingIncludeFile.c
#include "ThisFileDoesNotExist.h"

int main()
{}
